# backend/internal/models/event.go
@@ -6,6 +6,7 @@ type TamperEvent struct {
 	ID          uint      `json:"id" gorm:"primaryKey"`
 	MeterID     string    `json:"meter_id" gorm:"column:meter_id;index:idx_tamper_events_meter_time,priority:1"`
 	TamperCode  int       `json:"tamper_code" gorm:"column:tamper_code"`
+	EventOccur  int       `json:"event_occur" gorm:"column:event_occur;default:0"`
 	Timestamp   time.Time `json:"timestamp" gorm:"column:timestamp;index:idx_tamper_events_meter_time,priority:2"`
 	IsProcessed bool      `json:"is_processed" gorm:"column:processed;index"`
 }
